Some text added and alignment fixed
I use all these information about this character from the disney wiki.

--- a/css/hero.css
+++ b/css/hero.css
@@ -58,11 +58,12 @@ footer{
     background-color: #48b8d0;
     text-align: center;
     color: white;
-    padding: 50px;
+    padding: 15px;
 }
 
 footer p{
     margin: 0;
+    text-align: center;
 }
 
 p.caption{
@@ -75,11 +76,13 @@ p{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: normal;
     color: #1b5f6e;
+    text-align: justify;
 }
 
 ol{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-style: normal;
     color: #1b5f6e;
+    text-align: justify;
 
 }
